# cpp_effective_modern

./: CMakeLists.txt  README.md
auto/: CMakeLists.txt  prefer_auto_to_explicit_type01.cpp  use_explicitly_typed_initializer01.cpp
deducing_types/: CMakeLists.txt  auto_type_deduction01.cpp  template_type_deduction01.cpp  template_type_deduction02.cpp  understand_decltype01.cpp
moving_to_modern_cpp/: CMakeLists.txt  init_with_braces_and_parentheses01.cpp  init_with_braces_and_parenthesis01.cpp
universal_references/: .CMakeLists.txt.un~  .univer_ref01.cpp.un~  CMakeLists.txt  univer_ref01.cpp  univer_ref01.cpp~
using_noexcept/: CMakeLists.txt  using_noexcept01.cpp
